[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
itertools = "0.12.0"
paste = "*"
regex = "1.10.2"
